--- a/client/styles/global.scss
+++ b/client/styles/global.scss
@@ -3,7 +3,7 @@ body {
   font-family: system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("/HomeBG.jpg");
+  background-image: url("/Home.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
