--- a/client/src/components/AboutMe/AboutMe.module.scss
+++ b/client/src/components/AboutMe/AboutMe.module.scss
@@ -1,4 +1,8 @@
 .aboutContainer {
+  background-image: url("/Home.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
   display: flex;
   flex-direction: column;
   align-items: center;
