--- a/client/src/components/Drivers/Drivers.module.scss
+++ b/client/src/components/Drivers/Drivers.module.scss
@@ -4,4 +4,18 @@
   background-attachment: fixed;
   background-position: center;
   height: 100vh;
+
+  h1 {
+    text-align: center;
+    margin: 0;
+  }
+
+  .cardsContainer {
+    padding: 10px 24px 24px 24px;
+    display: flex;
+    flex-wrap: wrap;
+    height: auto;
+    justify-content: space-around;
+    gap: 20px;
+  }
 }
