--- a/client/src/components/NavBar/NavBar.module.scss
+++ b/client/src/components/NavBar/NavBar.module.scss
@@ -1,10 +1,4 @@
 .navContainer {
-  opacity: 0.9;
-  background-image: url("/Home.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-
   color: $first-color;
   min-height: auto;
   display: flex;
@@ -12,6 +6,7 @@
   padding: 0px 20px;
   align-items: center;
   min-height: 80px;
+  border-bottom: 1px solid rgb(0, 0, 0, 0.5);
 
   @include sm {
     flex-direction: column;
