--- a/client/src/components/NavBar/NavBar.module.scss
+++ b/client/src/components/NavBar/NavBar.module.scss
@@ -30,9 +30,10 @@
       display: flex;
       align-items: center;
       gap: 0.5em;
+      transition: transform 0.2s;
 
       &:hover {
-        opacity: 0.5;
+        transform: scale(1.1);
       }
     }
   }
@@ -59,7 +60,7 @@
         text-decoration: none;
 
         &:hover {
-          opacity: 0.5;
+          border-bottom: 3px solid $third-color;
         }
       }
 
@@ -73,7 +74,7 @@
         font-size: inherit;
 
         &:hover {
-          opacity: 0.5;
+          border-bottom: 3px solid $third-color;
         }
       }
     }
