--- a/client/src/components/PageNotFound/PageNotFound.module.scss
+++ b/client/src/components/PageNotFound/PageNotFound.module.scss
@@ -1,4 +1,4 @@
-.divContainer {
+.errorContainer {
   background-image: url("/Home.jpg");
   background-size: cover;
   background-attachment: fixed;
