--- a/client/src/components/DriverDetails/DriverDetails.module.scss
+++ b/client/src/components/DriverDetails/DriverDetails.module.scss
@@ -10,6 +10,28 @@
   .firstSection {
     text-align: center;
 
+    h1 {
+      margin-bottom: 0;
+    }
+
+    label {
+      display: none;
+      margin-bottom: 0.5em;
+      text-shadow: none;
+    }
+
+    button {
+      margin-bottom: 1em;
+      border: 3px solid $third-color;
+      border-radius: 0.5em;
+      transition: transform 0.2s;
+
+      &:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+      }
+    }
+
     img {
       border-style: groove;
       border-radius: 50%;
