--- a/client/src/components/RegisterDriver/RegisterDriver.module.scss
+++ b/client/src/components/RegisterDriver/RegisterDriver.module.scss
@@ -1,13 +1,9 @@
 .registerContainer {
-  background-image: url("/RegisterDriver.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: $second-color;
+  color: $first-color;
 
   h1 {
     text-shadow: 3px 3px $third-color;
