--- a/client/src/components/RegisterDriver/RegisterDriver.module.scss
+++ b/client/src/components/RegisterDriver/RegisterDriver.module.scss
@@ -42,6 +42,10 @@
           color: $second-color;
         }
       }
+
+      label {
+        color: $second-color;
+      }
     }
 
     @include sm {
