--- a/client/src/components/RegisterDriver/RegisterDriver.module.scss
+++ b/client/src/components/RegisterDriver/RegisterDriver.module.scss
@@ -1,5 +1,4 @@
 .registerContainer {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,8 +42,45 @@
         }
       }
 
+      select {
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
       label {
         color: $second-color;
+      }
+
+      button {
+        cursor: pointer;
+        border-radius: 16px;
+        border: none;
+        width: fit-content;
+        height: 25px;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-top: 5px;
+
+        &:hover {
+          color: $second-color;
+          background-color: black;
+        }
+
+        @include sm {
+          &:hover {
+            color: white;
+            background-color: $first-color;
+          }
+        }
+      }
+
+      .addTeam {
+        background-color: green;
+      }
+
+      .deleteTeam {
+        background-color: red;
       }
     }
 
@@ -68,6 +104,8 @@
         height: 25px;
         padding-left: 15px;
         padding-right: 15px;
+        background-color: $third-color;
+        color: $second-color;
 
         &:hover {
           color: $second-color;
