--- a/client/src/components/Drivers/Drivers.module.scss
+++ b/client/src/components/Drivers/Drivers.module.scss
@@ -14,6 +14,21 @@ body {
     border-bottom: 3px solid $third-color;
   }
 
+  .filters {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+
+    select {
+      border: 2px solid #4741d7;
+      border-radius: 3px;
+
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+
   .cardsContainer {
     text-align: initial;
     padding: 10px 24px 24px 24px;
