--- a/client/src/components/Drivers/Drivers.module.scss
+++ b/client/src/components/Drivers/Drivers.module.scss
@@ -29,6 +29,12 @@ body {
     }
   }
 
+  .pagination {
+    label {
+      margin: 0.5em;
+    }
+  }
+
   .cardsContainer {
     text-align: initial;
     padding: 10px 24px 24px 24px;
