--- a/client/src/components/Drivers/Drivers.module.scss
+++ b/client/src/components/Drivers/Drivers.module.scss
@@ -31,6 +31,15 @@ body {
         cursor: pointer;
       }
     }
+
+    button {
+      border: 2px solid #4741d7;
+      border-radius: 3px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
   }
 
   .pagination {
