--- a/client/src/components/AboutMe/AboutMe.module.scss
+++ b/client/src/components/AboutMe/AboutMe.module.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   align-items: center;
   color: $first-color;
+  position: relative;
 
   h1 {
     text-shadow: 3px 3px $third-color;
@@ -63,5 +64,11 @@
   tr:nth-child(even) {
     background-color: $second-color;
     color: $first-color;
+  }
+
+  .footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
   }
 }
