--- a/client/src/components/Drivers/Drivers.module.scss
+++ b/client/src/components/Drivers/Drivers.module.scss
@@ -53,6 +53,7 @@ body {
     label {
       margin: 0.5em;
       text-shadow: 3px 3px $third-color;
+      font-weight: bold;
     }
 
     button {
