--- a/client/src/components/RegisterDriver/RegisterDriver.module.scss
+++ b/client/src/components/RegisterDriver/RegisterDriver.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   color: $first-color;
+  position: relative;
 
   h1 {
     text-shadow: 3px 3px $third-color;
@@ -102,5 +103,11 @@
         }
       }
     }
+  }
+
+  .footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
   }
 }
