--- a/client/src/components/Drivers/Drivers.module.scss
+++ b/client/src/components/Drivers/Drivers.module.scss
@@ -62,6 +62,9 @@ body {
 
       &:hover {
         cursor: pointer;
+        background-color: $third-color;
+        -webkit-text-stroke: 1px white;
+        color: white;
       }
     }
   }
@@ -93,6 +96,9 @@ body {
 
     &:hover {
       cursor: pointer;
+      background-color: $third-color;
+      -webkit-text-stroke: 1px white;
+      color: white;
       transform: scale(1.1);
     }
   }
