--- a/client/src/components/DriverDetails/DriverDetails.module.scss
+++ b/client/src/components/DriverDetails/DriverDetails.module.scss
@@ -3,14 +3,14 @@
   justify-content: space-evenly;
   align-items: center;
   color: $first-color;
-  text-shadow: 3px 3px $third-color;
+
   line-height: 1.5;
   text-transform: capitalize;
   position: relative;
 
   .firstSection {
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 6em;
 
     h1 {
       margin-bottom: 0;
@@ -36,7 +36,7 @@
 
     img {
       border-style: groove;
-      border-radius: 50%;
+      clip-path: circle(60%);
       width: 250px;
 
       @include sm {
@@ -44,13 +44,21 @@
       }
     }
 
+    span,
     p {
       margin-left: 2em;
       margin-right: 2em;
+      background-color: white;
+      background-size: cover;
+      padding: 0.5em;
     }
 
     b {
       border-bottom: 3px solid $third-color;
+    }
+
+    p {
+      text-align: justify;
     }
   }
 
