--- a/client/src/components/RegisterDriver/RegisterDriver.module.scss
+++ b/client/src/components/RegisterDriver/RegisterDriver.module.scss
@@ -1,4 +1,8 @@
 .registerContainer {
+  background-image: url("/RegisterDriver.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,6 +12,7 @@
   h1 {
     text-shadow: 3px 3px $third-color;
     border-bottom: 3px solid $third-color;
+    color: white;
   }
 
   .formContainer {
