--- a/client/src/components/DriverDetails/DriverDetails.module.scss
+++ b/client/src/components/DriverDetails/DriverDetails.module.scss
@@ -7,10 +7,10 @@
   justify-content: space-evenly;
   align-items: center;
   color: $first-color;
-
   line-height: 1.5;
   text-transform: capitalize;
   position: relative;
+  min-height: 100vh;
 
   .firstSection {
     text-align: center;
