--- a/client/src/components/Login/Login.module.scss
+++ b/client/src/components/Login/Login.module.scss
@@ -125,6 +125,10 @@
   position: absolute;
   bottom: 10%;
 
+  @include sm {
+    bottom: 15%;
+  }
+
   .linkNav {
     color: #4741d7;
     text-decoration: none;
