--- a/client/src/components/DriverDetails/DriverDetails.module.scss
+++ b/client/src/components/DriverDetails/DriverDetails.module.scss
@@ -5,7 +5,6 @@
   background-position: center;
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
   color: $first-color;
   line-height: 1.5;
   text-transform: capitalize;
@@ -13,12 +12,20 @@
   min-height: 100vh;
 
   .firstSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
-    margin-bottom: 6em;
+    margin-bottom: 7em;
+
+    @include sm {
+      margin-bottom: 0;
+    }
 
     h1 {
       margin-bottom: 0;
       color: white;
+      text-shadow: 3px 3px $third-color;
     }
 
     label {
@@ -54,9 +61,8 @@
     p {
       margin-left: 2em;
       margin-right: 2em;
-      background-color: white;
-      background-size: cover;
       padding: 0.5em;
+      color: white;
     }
 
     b {
