--- a/client/src/components/AboutMe/AboutMe.module.scss
+++ b/client/src/components/AboutMe/AboutMe.module.scss
@@ -1,8 +1,5 @@
 .aboutContainer {
-  background-image: url("/Home.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
+  background-color: rgba(71, 65, 215, 0.3);
   display: flex;
   flex-direction: column;
   align-items: center;
