--- a/client/src/components/Driver/Driver.module.scss
+++ b/client/src/components/Driver/Driver.module.scss
@@ -9,6 +9,7 @@
   height: max-content;
   position: relative;
   text-transform: capitalize;
+  word-break: break-word;
 
   @include sm {
     width: 150px;
