--- a/client/src/components/AboutMe/AboutMe.module.scss
+++ b/client/src/components/AboutMe/AboutMe.module.scss
@@ -6,15 +6,14 @@
   color: $first-color;
   position: relative;
 
-  h1 {
-    text-shadow: 3px 3px $third-color;
-    border-bottom: 3px solid $third-color;
-  }
-
   img {
-    width: 200px;
+    width: 15%;
     border-style: groove;
     border-radius: 16px;
+
+    @include sm {
+      width: 40%;
+    }
   }
 
   .zoom {
@@ -43,8 +42,12 @@
   table {
     border: groove;
     border-collapse: collapse;
-    width: auto;
+    width: 50%;
     margin-bottom: 5em;
+
+    @include sm {
+      width: 80%;
+    }
   }
 
   td,
@@ -56,10 +59,6 @@
 
   tr {
     background-color: $third-color;
-
-    &:hover {
-      font-weight: bold;
-    }
   }
 
   tr:nth-child(even) {
