--- a/client/src/components/Drivers/Drivers.module.scss
+++ b/client/src/components/Drivers/Drivers.module.scss
@@ -4,11 +4,10 @@
   background-attachment: fixed;
   background-position: center;
   text-align: center;
+  width: 100%;
 
   h1 {
     display: inline;
-    text-shadow: 3px 3px $third-color;
-    border-bottom: 3px solid $third-color;
   }
 
   .filters {
@@ -20,6 +19,7 @@
     select {
       border: 2px solid #4741d7;
       border-radius: 3px;
+      text-align: center;
 
       &:focus {
         outline: none;
@@ -49,7 +49,6 @@
 
     label {
       margin: 0.5em;
-      text-shadow: 3px 3px $third-color;
       font-weight: bold;
     }
 
@@ -66,16 +65,6 @@
     }
   }
 
-  .inputPagination {
-    text-align: center;
-    border: 2px solid #4741d7;
-    border-radius: 3px;
-
-    &:focus {
-      outline: none;
-    }
-  }
-
   .cardsContainer {
     text-align: initial;
     padding: 10px 24px 24px 24px;
@@ -87,16 +76,21 @@
   }
 
   .scrollUp {
-    border: 2px solid #4741d7;
-    border-radius: 3px;
-    transition: transform 0.2s;
+    border: none;
+    display: flex;
+    cursor: pointer;
+    transition: opacity 0.3s, transform 0.3s;
+    /* posición */
+    position: fixed;
+    right: 1rem;
+    bottom: 4rem;
+    z-index: 9999;
+    font-size: 1.5rem;
+    background: none;
+    opacity: 0.3;
 
     &:hover {
-      cursor: pointer;
-      background-color: $third-color;
-      -webkit-text-stroke: 1px white;
-      color: white;
-      transform: scale(1.1);
+      opacity: 1;
     }
   }
 }
