--- a/client/src/components/RegisterDriver/RegisterDriver.module.scss
+++ b/client/src/components/RegisterDriver/RegisterDriver.module.scss
@@ -1,37 +1,47 @@
 .registerContainer {
-  background-image: url("/RegisterDriver.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
+  background-color: rgba(71, 65, 215, 0.3);
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: $first-color;
   position: relative;
-
-  h1 {
-    text-shadow: 3px 3px $third-color;
-    border-bottom: 3px solid $third-color;
-    color: white;
-  }
+  width: 100%;
 
   .formContainer {
+    background-color: white;
+    border: none;
+    border-radius: 1em;
+    display: flex;
+    justify-content: center;
+    width: 40%;
+    margin-bottom: 2em;
+
+    @include sm {
+      width: 50%;
+    }
+
+    label {
+      text-align: center;
+    }
+
     form {
       display: flex;
+      flex-wrap: wrap;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
+      width: 80%;
+      margin: 1em;
 
       input {
-        background-color: $second-color;
-        width: 200px;
+        width: 80%;
         height: 30px;
-        border-radius: 14px;
-        border: none;
+        border: thin solid black;
         border-radius: 14px;
         text-align: center;
 
         &:focus {
           outline: none;
+          font-weight: bold;
         }
 
         &::placeholder {
@@ -42,17 +52,18 @@
       p {
         margin: 0;
         text-align: center;
+        color: red;
       }
 
       select {
+        width: 80%;
+        height: 30px;
+        border: thin solid black;
+        border-radius: 14px;
+
         &:hover {
           cursor: pointer;
         }
-      }
-
-      label {
-        color: $second-color;
-        text-shadow: 3px 3px $third-color;
       }
 
       button {
@@ -66,30 +77,28 @@
         margin-top: 5px;
 
         &:hover {
-          color: $second-color;
-          background-color: black;
+          font-weight: bold;
         }
       }
 
       .addTeam {
-        background-color: green;
+        background-color: rgb(147, 255, 128);
       }
 
       .deleteTeam {
-        background-color: red;
+        background-color: rgb(255, 129, 129);
       }
-    }
 
-    @include sm {
-      position: revert;
+      .createDriver {
+        color: white;
+      }
     }
 
     .buttonContainer {
       display: flex;
       justify-content: center;
-      margin-top: 15px;
+      margin-top: 1em;
       flex-direction: column;
-      gap: 10px;
       align-items: center;
 
       button {
@@ -100,11 +109,10 @@
         height: 25px;
         padding-left: 15px;
         padding-right: 15px;
-        background-color: $third-color;
-        color: $second-color;
+        background-color: rgba(71, 65, 215, 1);
 
         &:hover {
-          background-color: black;
+          font-weight: bold;
         }
       }
     }
