--- a/client/src/components/NavBar/NavBar.module.scss
+++ b/client/src/components/NavBar/NavBar.module.scss
@@ -88,6 +88,10 @@
     .searchBar {
       display: flex;
       margin-right: 1em;
+
+      @include sm {
+        margin-right: 0;
+      }
     }
   }
 }
