--- a/client/src/components/Drivers/Drivers.module.scss
+++ b/client/src/components/Drivers/Drivers.module.scss
@@ -53,6 +53,8 @@
     label {
       margin: 0.5em;
       font-weight: bold;
+      color: white;
+      text-shadow: 2px 2px black;
     }
 
     button {
