--- a/client/src/components/Drivers/Drivers.module.scss
+++ b/client/src/components/Drivers/Drivers.module.scss
@@ -50,6 +50,10 @@
     gap: 0.5em;
     width: 100%;
 
+    @include sm {
+      margin-bottom: 0.5em;
+    }
+
     label {
       margin: 0.5em;
       font-weight: bold;
@@ -88,7 +92,7 @@
     transition: opacity 0.3s, transform 0.3s;
     position: fixed;
     right: 1rem;
-    bottom: 4.5rem;
+    bottom: 6rem;
     z-index: 9999;
     font-size: 1.5rem;
     background: none;
